# TurboQuant

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PAPER_VERIFICATION.md  README.md  TESTING.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: generate_all_assets.py  generate_animation.py  generate_figures.py  generate_social_preview.py
docs/superpowers/plans/: 2026-03-28-critical-fixes-and-ivf.md
docs/superpowers/specs/: 2026-03-28-critical-fixes-and-ivf-design.md
examples/: benchmark.py  benchmark_query_time.py  benchmark_real_data.py  quickstart.py  semantic_search.py
tests/: test_codebook.py  test_codebook_exhaustive.py  test_index.py  test_index_exhaustive.py  test_integration.py  test_ivf_index.py  test_properties.py  test_quantizer.py  test_quantizer_exhaustive.py  test_recall.py
turboquant/: __init__.py  codebook.py  index.py  ivf_index.py  quantizer.py
